tests/mm0_mmu/fail/bad-sort3421.mmu
-- bad modifier order
(sort s3421 provable free strict pure)